--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10565,3 +10565,11 @@ a.text-dark:focus {
   color: #28a745;
 }
 
+.post {
+  padding: 20px 0;
+}
+
+.post:not(:last-child) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
